adding some changes to the html file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>HTML Task</title>
         <link rel="icon" href="icon.png">
+
+        <!-- CSS Link -->
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <!-- start header -->
@@ -63,7 +66,7 @@
                     </fieldset>
                     <!-- end other information fieldset  -->
                     <br>
-                    <input type="submit">
+                    <button>submit</button>
                 </form>
                 <!-- end form  -->
             </section>
